2007-09-01  Stefan Harmeling  <harmeling@gmail.com>

	* prules.c (try_pr): removed bug, which ignored one level of
	list-lists...  the solution is a dirty hack as well and doesn't
	make the code nicer, but it looks like it works! 
	(see for instance prelude.rha:literal)

	* prelude.rha: now support for complex literals:

	[1,2,3]                // matrix
	[1,"et",3]             // list
	[1,3,6;31.14, 4.5, 5]  // matrix
	mat:[1,2,3]            // force matrix
	mat:[1,2,"test"]       // error
	tuple:[1,2,3]          // force tuple
	[,1,3]                 // error
	[1,,3]                 // error
	
	* prelude.rha, mat_fn.[hc], prules.[hc], rha_lexer.l, real_fn.[hc]: 
	added matrix support, including transpose, Hadamard product, etc.
	E.g. 

	a = randn(3,4);
	b = randn(4,5);
	c = a*(b.*b)*2;
	d = 3.14*a*(b.*b)*2.0/1;
	e = a*a';
	
2007-08-31  Stefan Harmeling  <harmeling@gmail.com>

	* prelude.rha (fn): removed bug in split_parselist, try:

   split_parselist(list().push(symbol(";"),symbol(",")),local,eval((\[1,2;3])(2)))
	
	as a note: (\[1,2;3])(2) is a cool way of generating  (\ [1, ,, 2, ;, 3])
	which becomes [1, ,, 2, ;, 3] after applying eval...
	
	* core.c (while_fn): added check whether the condition returns BOOL_T.

	* prules.c, prelude.rha: now complex literal start to work.  For
	this colon_pr() and squared_pr() had to adjusted.  Now we can
	implement complex literal behavior inside rhabarber.  See for
	instance in prelude.rha

	tuple.literal
	list.literal
	literal
	split_parselist

	However, some works needs to be done to make it convenient.

	* prelude.rha: now everything looks great!

	rha[0](-1)$ new.fn_data
	0 builtin()
	1 function(type:t)
	rha[1](-1)$ new.fn_data(1)
	function(type:t)
	rha[2](-1)$ callslot.fn_data
	0 builtin(object:<nosym>, symbol:<nosym>, ...)
	rha[3](-1)$ 

	* object.c: 'to_string' is now calling slot 'string' if possible.
	For internal use there is the much more robust version